Fourth commit - added form

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         isTouch ? _html.classList.add("touch") : _html.classList.add("no-touch");
     </script>
     <script type="text/javascript" src="js/device.min.js"></script>
+    <script src="https://kit.fontawesome.com/1f638b718b.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -83,10 +84,10 @@
                                 <a href="#events"><span>Events</span></a>
                             </li>
                             <li>
-                                <a href="https://discord.gg/y8dsfe2rW3"><span>Discord Community</span></a>
+                                <a href="#gallery_sec"><span>Gallery</span></a>
                             </li>
                             <li>
-                                <a href="#gallery_sec"><span>Gallery</span></a>
+                                <a href="form_original.html"><span>Issue a Component</span></a>
                             </li>
                         </ul>
                     </nav>
@@ -121,6 +122,8 @@
                                         <a class="fontello-facebook" style="color: #61f2ff; background-color: #05092bb6" href="https://www.facebook.com/Tesla.IIITA/"></a>
                                         <a class="fontello-paper-plane" style="color: #61f2ff; background-color: #05092bb6; " href="https://t.me/joinchat/O5zW6hN49TyWx3yh9FnggA"></a>
                                         <a class="fontello-instagram" style="color: #61f2ff; background-color: #05092bb6; " href="https://www.instagram.com/tesla_iiita/"></a>
+                                        <a href="https://discord.gg/y8dsfe2rW3" style="color: #61f2ff; background-color: #05092bb6; "><i class="fab fa-discord"></i></a>
+                                        <a href="https://linktr.ee/Tesla_IIITA" style="color: #61f2ff; background-color: #05092bb6; "><i class="fas fa-info"></i></a>
                                     </div>
 
                                 </div>
@@ -299,6 +302,10 @@
                     <div class="grid grid--container">
                         <div class="section-heading section-heading--center  col-MB-60">
                             <h2 class="__title">Team Members</h2>
+                        </div>
+
+                        <div class="section-heading section-heading--center  col-MB-60">
+                            <h2 class="__title">Faculty Coordinator - Dr Suneel Yadav</h2>
                         </div>
                         <div class="section-heading section-heading--center  col-MB-60">
                             <h3 class="__title">Coordinators</h3>
@@ -850,6 +857,7 @@
                         width: auto;
                     }
                     </style>
+                    <h1 class="text--center">Gallery</h1>
                         <div class="grid-container">
                           <div class="grid-item"><img class="gall" src="./img/gallery_img/elec2.jpg"></div>
                           <div class="grid-item"><img class="gall" src="./img/gallery_img/gal3.jpg"></div>
@@ -858,16 +866,14 @@
                           <div class="grid-item"><img class="gall" src="./img/gallery_img/gal9.jpg"></div>
                           <div class="grid-item"><img class="gall" src="./img/gallery_img/wolf1.jpg"></div>
                           <div class="grid-item"><img class="gall" src="./img/gallery_img/wolf2.jpg"></div>
-                          <div class="grid-item">8</div>
-                          <div class="grid-item">9</div>
+                          <!-- <div class="grid-item">8</div>
+                          <div class="grid-item">9</div> -->
                         </div>
                     </div>
-                <!-- end section -->
-                                <!-- start section -->
-                <!-- end item -->
-            </div>
+                
+                </div>
             <!-- end testimonial -->
-            </div>
+            
         </section>
 
     </main>
