--- a/index.html
+++ b/index.html
@@ -350,15 +350,47 @@
                             <h2 class="__title">Team Members</h2>
                         </div>
 
-                        <div class="section-heading section-heading--center  col-MB-60">
+                        <!-- <div class="section-heading section-heading--center  col-MB-60">
                             <h2 class="__title">Faculty Coordinator - Dr Suneel Yadav</h2>
                         </div>
                         <div class="section-heading section-heading--center  col-MB-60">
                             <h3 class="__title">Coordinators</h3>
-                        </div>
-
+                        </div> -->
 
                         <div class="team team--style-2 team--dark-color">
+                            <div class="__inner">
+                                <div class="row">
+                                    <div class="container">
+                                        <div class="cards">
+                                            <div class="imgBx">
+                                                <img
+                                                    src="team/suneel_yadav.jpg" />
+                                            </div>
+                                            <div class="content">
+                                                <div class="details">
+                                                    <h2>Dr. Suneel Yadav <br /><span>FACULTY COORDINATOR</span></h2>
+                                                    <ul class="social_icons">
+                                                        <li>
+                                                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                                        </li>
+                                                        <li>
+                                                            <a href="#"><i class="fab fa-twitter"></i></a>
+                                                        </li>
+                                                        <li>
+                                                            <a href="https://www.linkedin.com/in/mayank-saini-b72bb21a8/"><i class="fab fa-linkedin"></i></a>
+                                                        </li>
+                                                        <li>
+                                                            <a href="#"><i class="fab fa-instagram"></i></a>
+                                                        </li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+</div>
+</div>
+<div class="team team--style-2 team--dark-color">
                             <div class="__inner">
                                 <div class="row">
                                     <div class="container">
