--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
                             <li>
                                 <a href="form_original.html"><span>Issue a Component</span></a>
                             </li>
+                            <li>
+                                <a href="https://infourier.wordpress.com/">Write Blogs with us</a>
+                            </li>
                         </ul>
                     </nav>
 
@@ -123,7 +126,7 @@
                                         <a class="fontello-paper-plane" style="color: #61f2ff; background-color: #05092bb6; " href="https://t.me/joinchat/O5zW6hN49TyWx3yh9FnggA"></a>
                                         <a class="fontello-instagram" style="color: #61f2ff; background-color: #05092bb6; " href="https://www.instagram.com/tesla_iiita/"></a>
                                         <a href="https://discord.gg/y8dsfe2rW3" style="color: #61f2ff; background-color: #05092bb6; "><i class="fab fa-discord"></i></a>
-                                        <a href="https://linktr.ee/Tesla_IIITA" style="color: #61f2ff; background-color: #05092bb6; "><i class="fas fa-info"></i></a>
+                                        <a href="https://linktr.ee/Tesla_IIITA" style="color: #61f2ff; background-color: #05092bb6; "><i class="fas fa-info"></i></a>ma
                                     </div>
 
                                 </div>
