--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
                                         <div class="container">
                                             <div class="cards">
                                                 <div class="imgBx">
-                                                    <img src="team/yash.jpg" />
+                                                    <img src="team/yash.jpeg" />
                                                 </div>
                                                 <div class="content">
                                                     <div class="details">
@@ -653,11 +653,11 @@
                                             </div>
                                             <div class="cards">
                                                 <div class="imgBx">
-                                                    <img src="team/ajinkya.jpeg" />
+                                                    <img src="team/santhoshi.jpeg" />
                                                 </div>
                                                 <div class="content">
                                                     <div class="details">
-                                                        <h2>Ajinkya Kulkarni <br /><span>EDA WING</span></h2>
+                                                        <h2>Dornala Santhoshi <br /><span>EDA WING</span></h2>
                                                         <ul class="social_icons">
                                                             <li>
                                                                 <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -832,16 +832,16 @@
                                                         <h2>Shivanng Puri <br /><span>ROBOTICS WING</span></h2>
                                                         <ul class="social_icons">
                                                             <li>
-                                                                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                                                <a href="https://www.facebook.com/shivanng.puri/"><i class="fab fa-facebook-f"></i></a>
                                                             </li>
                                                             <li>
-                                                                <a href="#"><i class="fab fa-twitter"></i></a>
+                                                                <a href="https://twitter.com/shxvxnng"><i class="fab fa-twitter"></i></a>
                                                             </li>
                                                             <li>
-                                                                <a href="https://www.linkedin.com/in/rasika-phutke/"><i class="fab fa-linkedin"></i></a>
+                                                                <a href="https://www.linkedin.com/in/shivanng-puri"><i class="fab fa-linkedin"></i></a>
                                                             </li>
                                                             <li>
-                                                                <a href="#"><i class="fab fa-instagram"></i></a>
+                                                                <a href="https://www.instagram.com/shxvxnng/"><i class="fab fa-instagram"></i></a>
                                                             </li>
                                                         </ul>
                                                     </div>
