--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
                                                                         class="fab fa-linkedin"></i></a>
                                                             </li>
                                                             <li>
-                                                                <a href="https://www.instagram.com/itsyash.01/"><i class="fab fa-instagram"></i></a>
+                                                                <a href="https://www.instagram.com/aayoushee_ahlawat/"><i class="fab fa-instagram"></i></a>
                                                             </li>
                                                         </ul>
                                                     </div>
