Created Seperate Folders for yearwise teams and Wings

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                                         <div class="container">
                                             <div class="cards">
                                                 <div class="imgBx">
-                                                    <img src="team/suneel_yadav.jpg" />
+                                                    <img src="team/Team2023/suneel_yadav.jpg" />
                                                 </div>
                                                 <div class="content">
                                                     <div class="details">
@@ -388,7 +388,7 @@
                                         <div class="container">
                                             <div class="cards">
                                                 <div class="imgBx">
-                                                    <img src="team/FARHAN HAIDER-Coordinator.jpeg" />
+                                                    <img src="team/Team2024/Coordi2024/FARHAN_HAIDER.png"/>
                                                 </div>
                                                 <div class="content">
                                                     <div class="details">
@@ -398,16 +398,16 @@
                                                                 <a href="#"><i class="fab fa-facebook-f"></i></a>
                                                             </li> -->
                                                             <li>
-                                                                <a href="https://twitter.com/YashPrajapat01"><i
+                                                                <a href=""><i
                                                                         class="fab fa-twitter"></i></a>
                                                             </li>
                                                             <li>
                                                                 <a
-                                                                    href="https://www.linkedin.com/in/yash-prajapat-2a3851226/"><i
+                                                                    href=""><i
                                                                         class="fab fa-linkedin"></i></a>
                                                             </li>
                                                             <li>
-                                                                <a href="https://www.instagram.com/itsyash.01/"><i
+                                                                <a href=""><i
                                                                         class="fab fa-instagram"></i></a>
                                                             </li>
                                                         </ul>
@@ -416,7 +416,7 @@
                                             </div>
                                             <div class="cards">
                                                 <div class="imgBx">
-                                                    <img src="team/Mahajan Sai Saketh - Coordinator.jpg" />
+                                                    <img src="team/Team2024/Coordi2024/Mahajan Sai Saketh - Coordinator.jpg" />
                                                 </div>
                                                 <div class="content">
                                                     <div class="details">
@@ -446,7 +446,7 @@
                                           
                                             <div class="cards">
                                                 <div class="imgBx">
-                                                    <img src="team/Nitesh-Kumar-Shah_robotics.jpg" />
+                                                    <img src="team/Team2024/Coordi2024/Nitesh-Kumar-Shah_robotics.jpg" />
                                                 </div>
                                                 <div class="content">
                                                     <div class="details">
@@ -454,20 +454,20 @@
                                                         <ul class="social_icons">
                                                             <li>
                                                                 <a
-                                                                    href="https://www.facebook.com/profile.php?id=100017439098281"><i
+                                                                    href=""><i
                                                                         class="fab fa-facebook-f"></i></a>
                                                             </li>
                                                             <li>
-                                                                <a href="https://twitter.com/DheerajBhardw1"><i
+                                                                <a href=""><i
                                                                         class="fab fa-twitter"></i></a>
                                                             </li>
                                                             <li>
                                                                 <a
-                                                                    href="https://www.linkedin.com/mwlite/in/dheeraj-bhardwaj-57485120b"><i
+                                                                    href="https://www.linkedin.com/in/niteshkumarshah/"><i
                                                                         class="fab fa-linkedin"></i></a>
                                                             </li>
                                                             <li>
-                                                                <a href="https://www.instagram.com/_dhiru_bhardwaj793/"><i
+                                                                <a href="https://www.instagram.com/niteshhh_ks/"><i
                                                                         class="fab fa-instagram"></i></a>
                                                             </li>
                                                         </ul>
@@ -712,11 +712,11 @@
 
                                                 <div class="cards">
                                                     <div class="imgBx">
-                                                        <img src="team/devendra.jpg" />
+                                                        <img src="team/Team2024/SMemb2024/IOT/SanjayPaul_IOT.jpeg" />
                                                     </div>
                                                     <div class="content">
                                                         <div class="details">
-                                                            <h2>Devendra Kayande<br /><span>IOT WING</span></h2>
+                                                            <h2>PAUL SANJAY MANIKRAO<br /><span>WEB DEVELOPMENT WING</span></h2>
                                                             <ul class="social_icons">
                                                                 <li>
                                                                     <a
@@ -728,11 +728,11 @@
                                                             </li> -->
                                                                 <li>
                                                                     <a
-                                                                        href="https://www.linkedin.com/in/devendra-kayande-130284144/"><i
+                                                                        href="https://www.linkedin.com/in/sanjay-manikrao-paul-a51715251/"><i
                                                                             class="fab fa-linkedin"></i></a>
                                                                 </li>
                                                                 <li>
-                                                                    <a href="https://instagram.com/deven_427"><i
+                                                                    <a href="https://instagram.com/im_sanjay.paul"><i
                                                                             class="fab fa-instagram"></i></a>
                                                                 </li>
                                                             </ul>
