Updated Images Added

--- a/index.html
+++ b/index.html
@@ -718,11 +718,6 @@
                                                         <div class="details">
                                                             <h2>PAUL SANJAY MANIKRAO<br /><span>WEB DEVELOPMENT WING</span></h2>
                                                             <ul class="social_icons">
-                                                                <li>
-                                                                    <a
-                                                                        href="https://www.facebook.com/profile.php?id=100077142436614"><i
-                                                                            class="fab fa-facebook-f"></i></a>
-                                                                </li>
                                                                 <!-- <li>
                                                                 <a href="#"><i class="fab fa-twitter"></i></a>
                                                             </li> -->
@@ -741,7 +736,7 @@
                                                 </div>
                                                 <div class="cards">
                                                     <div class="imgBx">
-                                                        <img src="team/anurag.jpg" />
+                                                        <img src="team/Team2024/SMemb2024/IOT/" />
                                                     </div>
                                                     <div class="content">
                                                         <div class="details">
