--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@
                                                 </div>
                                                 <div class="cards">
                                                     <div class="imgBx">
-                                                        <img src="team/Team2024/SMemb2024/Members/PRAKRUTI -EDA.jpg" />
+                                                        <img src="team/Team2024/SMemb2024/Members/PRAKRUTI -EDA.jpeg" />
                                                     </div>
                                                     <div class="content">
                                                         <div class="details">
