--- a/index.html
+++ b/index.html
@@ -993,7 +993,7 @@
                                                 </div>
                                                 <div class="cards">
                                                     <div class="imgBx">
-                                                        <img src="team/Team2024/SMemb2024/Members/Suraj Srivastava - Robotics.jpg" />
+                                                        <img src="team/Team2024/SMemb2024/Members/Suraj.jpg" />
                                                     </div>
                                                     <div class="content">
                                                         <div class="details">
