--- a/index.html
+++ b/index.html
@@ -734,7 +734,7 @@
                                                     </div>
                                                     <div class="content">
                                                         <div class="details">
-                                                            <h2>Paul Sanjay Manikrao<br /><span>Web Development Wing</span></h2>
+                                                            <h2>Paul Sanjay Manikrao<br /><span>IOT Wing</span></h2>
                                                             <ul class="social_icons">
                                                                 <!-- <li>
                                                                 <a href="#"><i class="fab fa-twitter"></i></a>
