--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                             <div class="col hide--md col-MB-40"></div>
                             <div class="col col--md-5 col--lg-4">
                                 <div data-aos="fade-right" data-aos-offset="200">
-                                    <img src="./img/gifs/Robotics.gif" width="350" height="200" alt="Rounded Image" class="rounded-image">
+                                    <img src="./img/gifs/robotics.gif" width="350" height="200" alt="Rounded Image" class="rounded-image">
                                     <br>
                                     <br>
                                     <img src="./img/gifs/microchip4.gif" width="350" height="200"alt="Rounded Image" class="rounded-image">
@@ -1736,6 +1736,10 @@
                         .gall {
                             height: 30rem;
                             width: auto;
+                        }
+                        .shape {
+                            width: 70%;
+                            height: 40%;
                         }
                     </style>
                     <h1 class="text--center">Gallery</h1>
